# csce439-static-av

./: .dockerignore  .envexample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
artifacts/: ember_feature_spec.json  threshold.json
avlab/dataio/: dataset.py
avlab/features/: pe_static.py
avlab/metrics/: thresholding.py
avlab/models/: sklearn_baseline.py
avlab/serve/: pe_bytes_adapter.py
avlab/utils/: paths.py  seed.py
configs/: default.yaml  ember.yaml
defender/: Dockerfile  requirements.txt
defender/app/: ember_adapter.py  predictor.py  predictor_ember.py  server.py
scripts/: calibrate_ember.py  ember_cache.py  eval.py  eval_ember.py  featurize.py  train.py  train_ember.py
