[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avlab"
version = "0.0.1"
description = "CSCE439 modular AV framework"
authors = [{ name = "CSCE 439 Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy==2.1.1",
  "pandas==2.2.2",
  "scikit-learn==1.5.1",
  "pefile==2023.2.7",
  "joblib==1.4.2",
  "pyyaml==6.0.2",
  "python-dotenv==1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.2",
  "black==24.8.0",
  "ruff==0.6.9",
  "mypy==1.11.2",
  "types-PyYAML==6.0.12.20240808",
  "types-requests==2.32.0.20240914"
]

[tool.setuptools]
packages = ["avlab"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B"]
ignore = ["E203","E501"]